--- a/custom.css
+++ b/custom.css
@@ -49,7 +49,7 @@ a:-webkit-any-link {
 
 
 .section-1 {
-    margin-left: 300px;
+    margin-left: 0px;
 }
 
 .hire, .button {
@@ -83,8 +83,12 @@ a:-webkit-any-link {
 }
 
 .section-2 {
-    margin-left: 600px;
+    margin-left: 300px;
     margin-top: -300px;
+}
+
+.section-2 {
+    margin-left: -400px;
 }
 
 html {
